# nn-zero-to-hero-study

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
micrograd/: CMakeLists.txt
micrograd/src/: main.cc
